buildSrc/src/test/resources/test-projects/invalid-demo/demos/invalid/build.gradle.kts
plugins {
    id("olc.game_engine.demo")
}

demoModule {
    applicationName = "InvalidDemo"
    entryPoint = "demos.invalid.main"
}
